--- a/product/stream/serverless.yml
+++ b/product/stream/serverless.yml
@@ -33,10 +33,8 @@ resources:
           Statement:
             - Effect: Allow
               Principal:
-                Service:
-                  - lambda.amazonaws.com
-#                AWS: # role ARNs that are allowed to write to the Product stream
-#                  - 'arn:aws:iam::${accountId}:role/${persFdnTeamRole}'
+                AWS: # role ARNs that are allowed to write to the Product stream
+                  - 'arn:aws:iam::${accountId}:role/${teamRole}'
               Action: sts:AssumeRole
         Policies:
           - PolicyName: WriteToStream
@@ -60,10 +58,8 @@ resources:
           Statement:
             - Effect: Allow
               Principal:
-                Service:
-                  - lambda.amazonaws.com
-#                AWS: # role ARNs that are allowed to write to the Product stream
-#                  - 'arn:aws:iam::${accountId}:role/${persFdnTeamRole}'
+                AWS: # role ARNs that are allowed to write to the Product stream
+                  - 'arn:aws:iam::${accountId}:role/${teamRole}'
               Action: sts:AssumeRole
         Policies:
           - PolicyName: ReadFromStream
