Add the Product Provider (and Scraper) as a trusted principal

--- a/retail/serverless.yml
+++ b/retail/serverless.yml
@@ -35,6 +35,7 @@ resources:
               Principal:
                 AWS: # role ARNs that are allowed to write to the Retail stream
                   - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.private.teamRole}'
+                  - '${self:custom.private.productProvider}'
               Action: sts:AssumeRole
         ManagedPolicyArns:
           - ${self:custom.private.teamPolicy}
