* Defines npm script `test:scrape` that adds test products to the Retail Stream * Proxy may be bypassed by excluding that setting from `private.yml` for same * Relocates scraping scripts to test directory * Fixes id/Id for partition key and product id

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive -R min ./**/*.spec.js",
-    "lint": "eslint . bin util"
+    "lint": "eslint . bin util",
+    "test:scrape": "node ./products/test/scrape-products-exec.js"
   },
   "repository": {
     "type": "git",
