--- a/product-catalog/package.json
+++ b/product-catalog/package.json
@@ -4,7 +4,7 @@
   "description": "A stream processor that accumulates a catalog of our latest best knowledge regarding each product",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: tests executed by root hello-retail package.json\" && exit 1"
   },
   "author": "Nordstrom",
   "license": "Apache-2.0",
@@ -14,9 +14,5 @@
   "homepage": "https://github.com/Nordstrom/hello-retail/product-catalog#readme",
   "dependencies": {
     "ajv": "^4.10.4"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0"
   }
 }
