Remove Hard Coding
The service name and stage were hard coded.  This would result in the wrong result for any non-"dev" stage deployment.  Use variables.

--- a/product-catalog/serverless.yml
+++ b/product-catalog/serverless.yml
@@ -40,7 +40,7 @@ resources:
     CatalogLogGroup:
       Type: 'AWS::Logs::LogGroup'
       Properties:
-        LogGroupName: '/aws/lambda/hello-retail-product-catalog-dev-catalog'
+        LogGroupName: '/aws/lambda/${self:service}-${self:custom.stage}-catalog'
         RetentionInDays: 7
     # Product Catalog
     ProductCatalog:
