Fix Update, Only Succeed Message Failures, Improve Logging
0. Fix Update:
  a. Fix the update by removing the key from the update statement.

1. Only Succeed Message Failures:
  a. Add "bad msg:" error prefix.
  b. Use "bad msg:" error prefix to only succeed failures based on bad messages received.  (i.e. still fail for real failures in downstream systems)

2. Improve Logging
  a. Rename duplicated method name processEvent (was both in export and impl scope) to processEvent and processKinesisEvent.
  b. Correct the declaration of source method in error messages throughout (including use of now disambiguated method names)
  c. Improve environment and constants listing

--- a/product-catalog/serverless.yml
+++ b/product-catalog/serverless.yml
@@ -18,7 +18,7 @@ functions:
   catalog:
     role:
       'Fn::GetAtt': [ ProductCatalogReaderWriter, Arn ]
-    handler: catalog.processEvent
+    handler: catalog.processKinesisEvent
     environment:
       STAGE: ${self:custom.stage}
       STREAM_ARN:
