--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive -R min ./**/*.spec.js",
-    "lint": "eslint . bin util"
+    "lint": "eslint ./**/*.js"
   },
   "repository": {
     "type": "git",
