--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
     "test",
     "lint"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "aws-sdk": "^2.7.27",
     "chai": "^3.5.0",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
+    "https-proxy-agent": "^1.0.0",
     "mocha": "^3.0.2",
     "pre-commit": "^1.1.3"
   }
