--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An introduction to the event stream processing model for the purpose of implementing a retail system backbone",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive -R min ./**/*.spec.js",
+    "test": "./node_modules/.bin/mocha --recursive -R min ./**/*.spec.js",
     "lint": "./node_modules/.bin/eslint ./**/",
     "sim:scrape": "node ./products/test/scrape-products-exec.js"
   },
