test env vars remove duplicate dependency declaration move ajv to dev since for the root package.json, it is a dev dep.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,8 @@ version: 0.1
 phases:
   install:
     commands:
+      - echo $STAGE
+      - echo `$STAGE`
       - npm install -q -g serverless
   pre_build:
     commands:
