--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ phases:
       - npm run test
       - npm run lint
 #      - cd build           && sls deploy -s $STAGE
-      - cd retail-stream   && sls deploy --debug -s $STAGE
+      - cd retail-stream   && SLS_DEBUG=* && sls deploy -s $STAGE
       - cd products/lambda && sls deploy -s $STAGE
       - cd product-catalog && sls deploy -s $STAGE
   post_build:
