fully specify the ./private.yml target

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
       - npm --version
       - npm install -s -g serverless
       - sls --version
-      - aws s3 sync s3://com.$COMPANY.$TEAM.serverless.$REGION/secrets/hello-retail/private.yml . --region $REGION
+      - aws s3 sync s3://com.$COMPANY.$TEAM.serverless.$REGION/secrets/hello-retail/private.yml ./private.yml --region $REGION
       - ls -l
       - head -50 ./private.yml
   pre_build:
