--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,7 @@ phases:
       - npm --version
       - npm install -s -g serverless
       - sls --version
+      # Is this up to date?
       - aws s3 sync s3://com.$COMPANY.$TEAM.serverless.$REGION/secrets/hello-retail . --region $REGION
       - ls -l
       - head -50 ./private.yml
