--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
       - node --version
       - npm --version
 #      - npm install -g serverless
-      - npm install -g git+https://github.com/erikerikson/serverless.git#bug-fix-use-sts-instead-of-iam-to-get-account-id
+      - npm install -g git+https://github.com/erikerikson/serverless.git#working-mashup
       - sls --version
       - echo
       # Is this up to date?
