--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,8 +12,7 @@ phases:
       - echo
       - node --version
       - npm --version
-#      - npm install -g serverless
-      - npm install -g git+https://github.com/erikerikson/serverless.git#working-mashup
+      - npm install -g serverless
       - sls --version
       - echo
       # Is this up to date?
@@ -32,16 +31,10 @@ phases:
       - npm run test
       - npm run lint
       - chmod 700 $CODEBUILD_SRC_DIR/build/2.deploy.sh
+# TODO get the build infrastructure creation spec at ./build/serverless.yml sorted out and deploy it too!
 #      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Build Infrastructure"       $CODEBUILD_SRC_DIR/build
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Retail Stream"              $CODEBUILD_SRC_DIR/retail-stream
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying New Products Simulator"     $CODEBUILD_SRC_DIR/products/lambda
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Catalog Processor"  $CODEBUILD_SRC_DIR/product-catalog
-
 #  post_build:
 #    commands:
-      # TODO acceptance tests
-      # TODO (In a different project) integration tests
-      # TODO (In a different project?) performance tests
-#artifacts:
-#  files:
-#    - .travis.yml # a useless but small file to satisfy the buildspec.yml requirement
