--- a/retail-stream/serverless.yml
+++ b/retail-stream/serverless.yml
@@ -35,7 +35,7 @@ resources:
               Principal:
                 AWS: # role ARNs that are allowed to write to the Retail stream
                   - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.private.teamRole}'
-#                  - '${self:custom.private.productProvider}'
+                  - '${self:custom.private.productProvider}'
               Action: sts:AssumeRole
         ManagedPolicyArns:
           - ${self:custom.private.teamPolicy}
