Develop ui redux (#21)
* * Testing and build infrastructure for UI working.
* Changes root package.json npm test command to target specific directories; prevents UI test from being picked up as they are written in JSX and require transpilation.
* Updates ESLint ignore files to isolate linting for the UI project.

Outstanding linting errors for products/ on different branch, so this commit was forced with those linting errors being the only issue.

* Adds category and products.

* Adds category and product components.

* WIP for UI

* Working assume roles and DynamoDB category query

* Integrates initial AmazonLogin code into ReactJS App component.
Use Promise instead of callbacks for AmazonLogin code.
Use loadjs over Amazon supplied code to load login into page.

* Integrates initial AmazonLogin code into ReactJS App component.
Use Promise instead of callbacks for AmazonLogin code.

* CategoryPage provides live list of products from DynamoDB via fetchCategories function provided by App after authentication occurs.

* Minor cleanup of App code.

* Corrects permissions for ProductCatalog roles.
Removes unused Category counts.
Favors static ES6 keyword over property assignment to class name.
Implements calling server for list of products by category.
Removed incomplete User Registration form.
Removed unused webpack components and react tests.
Added sim:scrape:demo, web:build and web:dev:hot NPM commands.

* Per discussion, turning max-len (maximum line length) off for linting.

* Enabled linting of JSX files.
Disabled func-names rule.
Fixed many errors and warnings.

* Resolves package.json conflicts.
Restores the func-names rule.
Removes explicit dependency on eslint-plugin-jsx-a11y.

* Properly removes a11y dependency in eslint.
Deletes unnecessary .eslintignore file.

* Restore airbnb extends in .eslintrc.yml to a single line.

* Fix bad merge of package.json.

* Npm lint command properly finds both *.js and *.jsx fi

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --recursive -R min ./**/*.spec.js",
-    "lint": "./node_modules/.bin/eslint ./**/",
-    "sim:scrape": "node ./products/test/scrape-products-exec.js"
+    "lint": "./node_modules/.bin/eslint ./**/*.js ./**/*.jsx",
+    "sim:scrape": "node ./products/test/scrape-products-exec.js",
+    "web:build": "./node_modules/.bin/webpack --config ./web/webpack.config.js",
+    "web:dev:hot": "./node_modules/.bin/webpack-dev-server --config ./web/webpack.config.js --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./web/"
   },
   "repository": {
     "type": "git",
@@ -29,21 +31,35 @@
     "test",
     "lint"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "ajv": "^4.10.4",
-    "aws-sdk": "^2.7.16",
-    "chai": "^3.5.0",
-    "eslint": "^3.14.0",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
-    "https-proxy-agent": "^1.0.0",
-    "js-yaml": "^3.7.0",
-    "mocha": "^3.0.2",
-    "pre-commit": "^1.1.3",
-    "serverless": "^1.4.0"
+  "ajv": "^4.11.2",
+  "aws-sdk": "^2.7.16",
+  "babel-core": "^6.6.4",
+  "babel-eslint": "^7.1.1",
+  "babel-loader": "^6.2.10",
+  "babel-preset-airbnb": "^1.1.1",
+  "babel-preset-es2015": "^6.6.0",
+  "babel-preset-react": "^6.5.0",
+  "babel-preset-stage-0": "^6.22.0",
+  "babel-register": "^6.22.0",
+  "chai": "^3.5.0",
+  "enzyme": "^2.7.0",
+  "eslint": "^3.14.0",
+  "eslint-config-airbnb": "^14.0.0",
+  "https-proxy-agent": "^1.0.0",
+  "js-yaml": "^3.7.0",
+  "jsdom": "^9.9.1",
+  "json-loader": "^0.5.4",
+  "loadjs": "^3.3.1",
+  "mocha": "^3.0.2",
+  "pre-commit": "^1.1.3",
+  "react": "^15",
+  "react-addons-test-utils": "^15.4.2",
+  "react-dom": "^15",
+  "react-router": "^3.0.2",
+  "serverless": "^1.4.0",
+  "webpack": "^1.14.0",
+  "webpack-dev-server": "^1.16.2"
   }
 }
