--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
   "enzyme": "^2.7.0",
   "eslint": "^3.14.0",
   "eslint-config-airbnb": "^14.0.0",
+  "eslint-plugin-import": "^2.2.0",
+  "eslint-plugin-jsx-a11y": "^3.0.2",
+  "eslint-plugin-react": "^6.9.0",
   "https-proxy-agent": "^1.0.0",
   "js-yaml": "^3.7.0",
   "jsdom": "^9.9.1",
