--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,14 +19,24 @@ phases:
   pre_build:
     commands:
       - chmod 700 $CODEBUILD_SRC_DIR/build/1.install.sh
-      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing Top-Level Project Dependencies"     $CODEBUILD_SRC_DIR
-      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing New Product Simulator Dependencies" $CODEBUILD_SRC_DIR/products/lambda
-      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing Product Catalog Dependencies"       $CODEBUILD_SRC_DIR/product-catalog
+      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing Top-Level Project Dependencies"           $CODEBUILD_SRC_DIR
+      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing New Product Simulator Dependencies"       $CODEBUILD_SRC_DIR/products/lambda
+      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing Product Catalog Dependencies"             $CODEBUILD_SRC_DIR/product-catalog
+      # Product Photos
+      - $CODEBUILD_SRC_DIR/build/1.install.sh "Installing Product Photos - Dispatch Dependencies"   $CODEBUILD_SRC_DIR/product-photos/1.dispatch
   build:
     commands:
       - npm run test
       - npm run lint
       - chmod 700 $CODEBUILD_SRC_DIR/build/2.deploy.sh
-      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Retail Stream"              $CODEBUILD_SRC_DIR/retail-stream
-      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying New Products Simulator"     $CODEBUILD_SRC_DIR/products/lambda
-      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Catalog Processor"  $CODEBUILD_SRC_DIR/product-catalog
+      # Core Stream
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Retail Stream"                $CODEBUILD_SRC_DIR/retail-stream
+      # Product Creation
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying New Products Simulator"       $CODEBUILD_SRC_DIR/products/lambda
+      # Product Catalog
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Catalog Processor"    $CODEBUILD_SRC_DIR/product-catalog
+      # Product Photos
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - Data"        $CODEBUILD_SRC_DIR/product-photos/0.data
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - Assign"      $CODEBUILD_SRC_DIR/product-photos/2.assign -step # deploy the step function that 1 starts and 3 stops (and thus depend on the exported arn of)
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - Dispatch"    $CODEBUILD_SRC_DIR/product-photos/1.dispatch
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - Image"       $CODEBUILD_SRC_DIR/product-photos/3.image
